--- a/planeteers-ui/src/App.css
+++ b/planeteers-ui/src/App.css
@@ -1,42 +1,55 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+body {
+  color: black;
   text-align: center;
+  display: flex;
+  min-height: 100wh;
+  align-items: center;
+  justify-content: center;
+  background-image: linear-gradient(79deg, #298d9e, #65611e 48%, #ebfff0);
+}
+header{
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+  padding: 2px;
+  font-size: 3rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+.auth-form-container, .login-form, .register-form {
+  display: flex;
+  flex-direction: column;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+label {
+  text-align: left;
+  padding: .25rem 0;
+}
+
+input {
+  margin: .5rem 0;
+  padding: 1rem;
+  border: none;
+  border-radius: 10px;  
+}
+
+button {
+  border: none;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.link-btn {
+  background: none;
+  background-color: white;
+  text-decoration: underline;
+}
+
+img{
+  max-width: 100%;
+  max-height: 100%;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
