React Routing Added

--- a/planeteers-ui/src/pages/Home.css
+++ b/planeteers-ui/src/pages/Home.css
@@ -25,7 +25,7 @@ body{
   grid-template-rows: repeat(2, 1fr);
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
-  color: green;
+  color: blue;
 }
 
 
