--- a/planeteers-ui/src/App.css
+++ b/planeteers-ui/src/App.css
@@ -8,7 +8,7 @@ body {
   background-image: linear-gradient(79deg, #298d9e, #65611e 48%, #ebfff0);
 }
 header{
-  position: sticky;
+  position: static;
   top: 0%;
   left: 0;
   width: 100%;
@@ -53,4 +53,66 @@ button {
 img{
   max-width: 100%;
   max-height: 100%;
+  }
+  .navbar {
+    position: static;
+    padding: 5px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 50px
+}
+  
+  .navbar ul li{
+     list-style: none;
+     display: inline-block;
+     margin: 0 20px;
+     font-size: 200px
+  }
+  .game {
+    width: 1400px;
+    height: 650px;
+    align-items:center;
+    text-align:center;
+    padding: 30px;
+    gap: 20px;
+    color: blue;
+        background-color: lightgray;
+  
+  }
+  
+  .howtoplay {
+    height: 250px;
+    width: 900px;
+    background-color: lightgray;
+    margin: 10px;
+    display: inline-block;}
+  
+  .rating {
+    display: inline-block;
+    background-color: lightgray;
+    margin: 10px;
+    height: 200px;
+    width: 300px;
+   }
+  
+  .comments {
+    background-color: lightgray;
+    height: 500px;
+    width: 1200px;
+  
+  
+  }
+  
+  .footer {
+     position: fixed;
+     left: 0;
+     bottom: 0;
+     width: 100%;
+     color: blue;
+     text-align: center;
+  }
+
+  .row {
+    display: flex;
   }
